--- a/index.html
+++ b/index.html
@@ -3,9 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/main.css">
     <title>Code Quiz</title>
 </head>
 <body>
-    
+    <header>
+        <div class="title-section">Code Quiz!</div>
+        <button class="start-button">Start</button> 
+    </header>
+
+    <main>
+        
+    </main>
+
+
+
+    <script src="script.js"></script>
 </body>
 </html>
