Added style elements to header section in main.css

--- a/index.html
+++ b/index.html
@@ -7,13 +7,14 @@
     <title>Code Quiz</title>
 </head>
 <body>
-    <header>
-        <div class="title-section">Code Quiz!</div>
+    <header class="title-section" >
+        <h1>Code Quiz!</h1>
         <button class="start-button">Start</button> 
+        <p> The following quiz will test your knowledge on JavaScript material <br>with a series of multiple choice questions. Good luck! </p>
     </header>
 
     <main>
-        
+
     </main>
 
 
