--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </header>
     <main>
         <form class = "quiz-container">
-            <h2>Question Text</h2>
+            <h2 id = "question">Question Text</h2>
         <ul>
             <li>
                 <input type="radio" name="answer" id="a" class="answer">
