added timer function to js

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <p> The following quiz will test your knowledge on JavaScript material <br>with a series of multiple choice questions. Good luck! </p>
     </header>
     <main>
+        <div id= "quiz-time"></div>
         <form class = "quiz-container">
             <h2 id = "question">Question Text</h2>
         <ul>
