--- a/index.html
+++ b/index.html
@@ -15,28 +15,8 @@
     <main>
         <div id= "quiz-time"></div>
         <form class = "quiz-container">
-            <h2 id = "question">Question Text</h2>
-        <ul>
-            <li>
-                <input type="radio" name="answer" id="a" class="answer">
-                <label for="a" id="a-text">Answer</label>
-            </li>
-
-            <li>
-                <input type="radio" name="answer" id="b" class="answer">
-                <label for="b" id="b-text">Answer</label>
-            </li>
-
-            <li>
-                <input type="radio" name="answer" id="c" class="answer">
-                <label for="c" id="c-text">Answer</label>
-            </li>
-
-            <li>
-                <input type="radio" name="answer" id="d" class="answer">
-                <label for="d" id="d-text">Answer</label>
-            </li>
-        </ul>
+            <h2 id = "question"></h2>
+       <div id ="options"></div>
         <button id="submit">Submit</button>
     </form>
        
