adjusted title in html

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header class="title-section" >
         <h1>Code Quiz!</h1>
         <button class="start-button">Start</button> 
-        <p> The following quiz will test your knowledge on JavaScript material <br>with a series of multiple choice questions. Good luck! </p>
+        <p> The following quiz will test your knowledge on coding material <br>with a series of multiple choice questions. Good luck! </p>
     </header>
     <main id="main-div">
         <div id= "quiz-time"></div>
